--- a/CashBookApp.WinForm/CashBookApp.WinForm.csproj
+++ b/CashBookApp.WinForm/CashBookApp.WinForm.csproj
@@ -50,6 +50,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>cashier.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="AutoUpdater.NET, Version=1.5.8.0, Culture=neutral, PublicKeyToken=501435c91b35f4bc, processorArchitecture=MSIL">
       <HintPath>..\packages\Autoupdater.NET.Official.1.5.8\lib\net40\AutoUpdater.NET.dll</HintPath>
@@ -356,6 +359,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Backup.exe" />
+    <Content Include="cashier.ico" />
     <Content Include="Data\CashBook.mdf">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
