--- a/CashBookApp.WinForm/CashBookApp.WinForm.csproj
+++ b/CashBookApp.WinForm/CashBookApp.WinForm.csproj
@@ -8,7 +8,7 @@
     <ProjectGuid>{23521D50-2C8D-4876-8A74-9FDC4B11118E}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <RootNamespace>CashBookApp.WinForm</RootNamespace>
-    <AssemblyName>CashBookApp.WinForm</AssemblyName>
+    <AssemblyName>Kasa Takip</AssemblyName>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -52,6 +52,9 @@
   </PropertyGroup>
   <PropertyGroup>
     <ApplicationIcon>cashier.ico</ApplicationIcon>
+  </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="AutoUpdater.NET, Version=1.5.8.0, Culture=neutral, PublicKeyToken=501435c91b35f4bc, processorArchitecture=MSIL">
@@ -340,6 +343,7 @@
       <Generator>EntityModelCodeGenerator</Generator>
       <LastGenOutput>ModelCashBook.Designer.cs</LastGenOutput>
     </EntityDeploy>
+    <None Include="app.manifest" />
     <None Include="Model\ModelCashBook.edmx.diagram">
       <DependentUpon>ModelCashBook.edmx</DependentUpon>
     </None>
